<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:collapseIcon="@drawable/ic_launcher_background">

    <data>

        <variable
            name="searchViewModel"
            type="com.gprifti.app.ui.SearchTaskViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_background_color">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:closeIcon="@drawable/ic_close"
            android:searchIcon="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="2dp"
            android:background="@color/white_search_view_color"
            app:layout_constraintBottom_toTopOf="@+id/btnArchive"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp"/>

        <Button
            android:id="@+id/btnArchive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_fllter_selected"
            android:onClick="@{() -> searchViewModel.changeFilterState(2)}"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/filter_archived"
            android:textSize="@dimen/txt_filter"
            app:layout_constraintBottom_toBottomOf="@+id/btnActive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnActive"
            app:layout_constraintTop_toTopOf="@+id/btnActive" />

        <Button
            android:id="@+id/btnAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_filter_not_selected"
            android:onClick="@{() -> searchViewModel.changeFilterState(0)}"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/filter_all"
            android:textSize="@dimen/txt_filter"
            app:layout_constraintBottom_toBottomOf="@+id/btnActive"
            app:layout_constraintEnd_toStartOf="@+id/btnActive"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnActive" />

        <Button
            android:id="@+id/btnActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_filter_not_selected"
            android:onClick="@{() -> searchViewModel.changeFilterState(1)}"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/filter_active"
            android:textSize="@dimen/txt_filter"
            app:layout_constraintEnd_toStartOf="@+id/btnArchive"
            app:layout_constraintStart_toEndOf="@+id/btnAll"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/label__search_for_task_tittle"
            android:textSize="@dimen/txt_description_filter"
            app:layout_constraintBottom_toTopOf="@+id/recycleViewTasks"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/btnActive" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewTasks"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminateDrawable="@drawable/progress_bar_style"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtSomethingWentWrongMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_something_went_wrong"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNotResultMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_no_result_found"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/initSearchMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="textView,view2,imageView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/label_search_for_a_task"
            android:textSize="@dimen/txt_description_filter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            app:layout_constraintVertical_bias="0.02" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/image_view_circle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHeight_percent="0.18"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/recycleViewTasks"
            app:layout_constraintVertical_bias="0.342" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/desc_search_image"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintHeight_percent="0.12"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toTopOf="@+id/view2"
            app:srcCompat="@drawable/ic_search_centered" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>